<resources>
    <string name="app_name">FestivalApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="new_costs">Neue Kosten</string>
    <string name="name">Name</string>
    <string name="price">Preis</string>
    <string name="button">Button</string>
    <string name="cost_overview">Kostenübersicht</string>
    <string name="total">Gesamt</string>
    <string name="add_new_countdown">Füge ein Festival hinzu</string>
    <string name="countdown_view">0</string>
    <string name="countdownTimer">00:00:00</string>
    <string name="festival_day">Tag</string>
    <string name="festival_month">Monat</string>
    <string name="festival_year">Jahr</string>
    <string name="countdown_btn">Zähle die Tage</string>
    <string name="current_date">Current Date</string>
    <string name="countdownViewOne">Nur noch </string>
    <string name="countdownViewTwo"> bis zum Festival</string>
    <string name="countdown_viewWidget">Bald geht es los!</string>
    <string name="enterHelp">Fülle das Datum so aus: 01-01-2018</string>
    <string name="hint_content_text">Preis der neuen Ausgabe...</string>
    <string name="hint_content_title">Name der neuen Ausgabe...</string>
    <string name="button_removeCost">Eintrag löschen</string>
    <string name="button_updateCost">Ausgabe hinzufügen</string>
    <string name="packlist">Packliste</string>
    <string name="total_cost">Gesamtkosten</string>
    <string name="total_cost_price">Preis</string>
    <string name="your_current_total_cost">Deine bisherigen Ausgaben betragen:</string>
    <string name="total_price">Gesamtpreis</string>
    <string name="Weather">Wetterinfo</string>
    <string name="insert_a_city">Gib eine Stadt ein...</string>
    <string name="show_weather">Zeige mir das Wetter</string>
    <string name="current_weather">Aktuelles Wetter</string>
    <string name="date">Datum</string>
    <string name="city">Stadt</string>
    <string name="celsius">Grad°</string>
    <string name="description">Beschreibung</string>
    <string name="add_new_task">Sonstiges...</string>
</resources>
