<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainFestivalActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/day_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="60dp"
            android:hint="@string/festival_day"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/month_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="60dp"
            android:hint="@string/festival_month"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/year_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:hint="@string/festival_year"
            android:inputType="number"
            android:maxLength="4"
            android:textAlignment="center"
            android:textSize="30sp" />

    </LinearLayout>

    <RelativeLayout
android:layout_width="match_parent"
android:layout_height="wrap_content">
<Button
    android:id="@+id/start_countdown_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="50dp"
    android:textSize="20sp"
    android:text="@string/countdown_btn"/>
</RelativeLayout>

<TextView
android:id="@+id/enterHelp"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:textSize="20sp"
android:text="@string/enterHelp"
android:textAlignment="center" />
    </LinearLayout>