<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/new_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Neue Kosten hinzufügen"
        android:textSize="25dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <EditText
        android:id="@+id/content_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_content_title"
        android:inputType="text|textAutoComplete|textAutoCorrect"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/content_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_content_text"
        android:inputType="number"
        android:textSize="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">


        <Button
            android:id="@+id/button_updateCost"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/button_updateCost" />

        <Button
            android:id="@+id/button_removeCost"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/button_removeCost" />

    </LinearLayout>

</LinearLayout>