<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainFestivalActivity"
    tools:showIn="@layout/app_bar_main_festival">


    <TextView
        android:id="@+id/cost_price_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/your_current_total_cost"
        android:paddingTop="130dp" />

    <TextView
        android:id="@+id/total_cost_price_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/total_cost"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/main_countdownView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/countdown_viewWidget"
        android:paddingTop="80dp"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>

</LinearLayout>

